--- a/package.json
+++ b/package.json
@@ -21,8 +21,11 @@
     "@angular/router": "^17.3.0",
     "@supabase/supabase-js": "^2.49.1",
     "chart.js": "^4.4.8",
+    "cors": "^2.8.5",
     "date-fns": "^4.1.0",
     "date-fns-tz": "^3.2.0",
+    "express": "^5.1.0",
+    "http-proxy-middleware": "^3.0.5",
     "papaparse": "^5.5.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
